[workspace]
members = [
    "bench-exchange",
    "bench-streamerbot",
    "benchbot",
    "client",
    "core",
    "tokenbot",
    "validator",
    "genesis",
    "gossip",
    "install",
    "keybot",
    "kvstore",
    "ledgerbot",
    "metricbot",
    "netutil",
    "controllers/bpf",
    "controllers/bpf_loader",
    "controllers/budget_api",
    "controllers/budget_controller",
    "controllers/config_api",
    "controllers/config_controller",
    "controllers/exchange_api",
    "controllers/exchange_controller",
    "controllers/failure_controller",
    "controllers/noop_controller",
    "controllers/stake_api",
    "controllers/stake_controller",
    "controllers/storage_api",
    "controllers/storage_controller",
    "controllers/token_api",
    "controllers/token_controller",
    "controllers/vote_api",
    "controllers/vote_controller",
    "replicator",
    "runtime",
    "interface",
    "upload-perf",
    "vote-signer",
    "wallet",
    "helper",
]
exclude = ["controllers/bpf/rust/noop"]
