[package]
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
edition = "2018"
name = "morgan-bench-exchange"
version = "0.15.3"
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
publish = false

[dependencies]
ansi_term = "0.12"
bs58 = "0.2.0"
clap = "2.32.0"
bincode = "1.1.4"
env_logger = "0.6.0"
itertools = "0.8.0"
log = "0.4.6"
num-traits = "0.2"
num-derive = "0.2"
rand = "0.6.5"
rayon = "1.0.3"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.38"
# morgan-runtime = { path = "../morgan/runtime"}
morgan = { path = "../core", version = "0.15.3"     }
morgan-client = { path = "../client", version = "0.15.3"     }
morgan-tokenbot = { path = "../tokenbot", version = "0.15.3"     }
morgan-exchange-api = { path = "../controllers/exchange_api", version = "0.15.3"     }
morgan-exchange-controller = { path = "../controllers/exchange_controller", version = "0.15.3"     }
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-metricbot = { path = "../metricbot", version = "0.15.3"     }
morgan-netutil = { path = "../netutil", version = "0.15.3"     }
morgan-runtime = { path = "../runtime", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-helper = { path = "../helper", version = "0.1.0" }
ws = "0.8.1"
untrusted = "0.6.2"

[features]
cuda = ["morgan/cuda"]
erasure = []
