[package]
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
edition = "2018"
name = "morgan-benchbot"
version = "0.15.3"
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"

[dependencies]
ansi_term = "0.12"
clap = "2.33.0"
log = "0.4.6"
rayon = "1.0.3"
serde_json = "1.0.39"
morgan = { path = "../core", version = "0.15.3"     }
morgan-client = { path = "../client", version = "0.15.3"     }
morgan-tokenbot = { path = "../tokenbot", version = "0.15.3"     }
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-metricbot = { path = "../metricbot", version = "0.15.3"     }
morgan-netutil = { path = "../netutil", version = "0.15.3"     }
morgan-runtime = { path = "../runtime", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-helper = { path = "../helper", version = "0.1.0"     }

[features]
cuda = ["morgan/cuda"]
erasure = []
