[package]
name = "morgan-client"
version = "0.15.3"
description = "Morgan Client"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
homepage = "https://morgan.com/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
ansi_term = "0.12"
bincode = "1.1.4"
bs58 = "0.2.0"
log = "0.4.2"
jsonrpc-core = "10.1.0"
reqwest = "0.9.17"
serde = "1.0.89"
serde_derive = "1.0.91"
serde_json = "1.0.39"
morgan-netutil = { path = "../netutil", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-helper = { path = "../helper", version = "0.1.0"     }
chrono = "0.4"

[dev-dependencies]
jsonrpc-core = "10.1.0"
jsonrpc-http-server = "10.1.0"
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-helper = { path = "../helper", version = "0.1.0"     }
