[package]
name = "morgan"
description = "Blockchain, Rebuilt for Scale"
version = "0.15.3"
documentation = "https://docs.rs/morgan"
homepage = "https://morgan.com/"
readme = "../README.md"
repository = "https://github.com/morgan-labs/morgan"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
license = "Apache-2.0"
edition = "2018"

[badges]
codecov = { repository = "morgan-labs/morgan", branch = "master", service = "github" }

[features]
chacha = []
cuda = []
erasure = []
kvstore = ["morgan-kvstore"]

[dependencies]
bincode = "1.1.4"
bs58 = "0.2.0"
byteorder = "1.3.1"
chrono = { version = "0.4.0", features = ["serde"] }
crc = { version = "1.8.1", optional = true }
core_affinity = "0.5.9"
hashbrown = "0.2.0"
indexmap = "1.0"
itertools = "0.8.0"
jsonrpc-core = "11.0.0"
jsonrpc-derive = "11.0.0"
jsonrpc-http-server = "11.0.0"
jsonrpc-pubsub = "11.0.0"
jsonrpc-ws-server = "11.0.0"
libc = "0.2.55"
log = "0.4.2"
memmap = { version = "0.7.0", optional = true }
nix = "0.14.0"
rand = "0.6.5"
rand_chacha = "0.1.1"
rayon = "1.0.0"
reed-solomon-erasure = "3.1.1"
reqwest = "0.9.17"
rocksdb = "0.11.0"
serde = "1.0.89"
serde_derive = "1.0.91"
serde_json = "1.0.39"
morgan-budget-api = { path = "../controllers/budget_api", version = "0.15.3"     }
morgan-budget-controller = { path = "../controllers/budget_controller", version = "0.15.3"     }
morgan-client = { path = "../client", version = "0.15.3"     }
morgan-tokenbot = { path = "../tokenbot", version = "0.15.3"     }
solana-ed25519-dalek = "0.2.0"
morgan-kvstore = { path = "../kvstore", version = "0.15.3" , optional = true     }
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-metricbot = { path = "../metricbot", version = "0.15.3"     }
morgan-netutil = { path = "../netutil", version = "0.15.3"     }
morgan-runtime = { path = "../runtime", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-stake-api = { path = "../controllers/stake_api", version = "0.15.3"     }
morgan-stake-controller = { path = "../controllers/stake_controller", version = "0.15.3"     }
morgan-storage-api = { path = "../controllers/storage_api", version = "0.15.3"     }
morgan-storage-controller = { path = "../controllers/storage_controller", version = "0.15.3"     }
morgan-vote-api = { path = "../controllers/vote_api", version = "0.15.3"     }
morgan-vote-controller = { path = "../controllers/vote_controller", version = "0.15.3"     }
morgan-exchange-controller = { path = "../controllers/exchange_controller", version = "0.15.3"     }
morgan-config-controller = { path = "../controllers/config_controller", version = "0.15.3"     }
morgan-vote-signer = { path = "../vote-signer", version = "0.15.3"     }
morgan-helper = { path = "../helper", version = "0.1.0"     }

sys-info = "0.5.6"
tokio = "0.1"
tokio-codec = "0.1"
untrusted = "0.6.2"
[dev-dependencies]
hex-literal = "0.2.0"
matches = "0.1.6"


[[bench]]
name = "banking_stage"

[[bench]]
name = "blocktree"

[[bench]]
name = "ledger"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "poh"

[[bench]]
required-features = ["chacha"]
name = "chacha"
