[package]
name = "morgan-drone"
version = "0.15.3"
description = "Morgan Drone"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[features]
cuda = []
erasure = []

[dependencies]
bincode = "1.1.4"
bytes = "0.4"
byteorder = "1.3.1"
clap = "2.33"
log = "0.4.2"
serde = "1.0.91"
serde_derive = "1.0.91"
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-sdk = { path = "../sdk", version = "0.15.3"     }
morgan-metrics = { path = "../metrics", version = "0.15.3"     }
tokio = "0.1"
tokio-codec = "0.1"

[lib]
name = "morgan_drone"
crate-type = ["lib"]

[[bin]]
name = "morgan-drone"
path = "src/bin/drone.rs"
