[package]
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
edition = "2018"
name = "morgan-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "0.15.3"
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"

[dependencies]
clap = "2.33.0"
serde_json = "1.0.39"
morgan = { path = "../core", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-budget-api = { path = "../controllers/budget_api", version = "0.15.3"     }
morgan-budget-controller = { path = "../controllers/budget_controller", version = "0.15.3"     }
morgan-vote-api = { path = "../controllers/vote_api", version = "0.15.3"     }
morgan-vote-controller = { path = "../controllers/vote_controller", version = "0.15.3"     }
morgan-stake-api = { path = "../controllers/stake_api", version = "0.15.3"     }
morgan-stake-controller = { path = "../controllers/stake_controller", version = "0.15.3"     }
morgan-storage-api = { path = "../controllers/storage_api", version = "0.15.3"     }
morgan-storage-controller = { path = "../controllers/storage_controller", version = "0.15.3"     }
morgan-token-api = { path = "../controllers/token_api", version = "0.15.3"     }
morgan-token-controller = { path = "../controllers/token_controller", version = "0.15.3"     }
morgan-config-api = { path = "../controllers/config_api", version = "0.15.3"     }
morgan-config-controller = { path = "../controllers/config_controller", version = "0.15.3"     }
morgan-exchange-api = { path = "../controllers/exchange_api", version = "0.15.3"     }
morgan-exchange-controller = { path = "../controllers/exchange_controller", version = "0.15.3"     }

[dev-dependencies]
hashbrown = "0.3.0"


[features]
cuda = ["morgan/cuda"]
erasure = []
