[package]
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
edition = "2018"
name = "morgan-gossip"
description = "Blockchain, Rebuilt for Scale"
version = "0.15.3"
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"

[dependencies]
clap = "2.33.0"
env_logger = "0.6.1"
morgan = { path = "../core", version = "0.15.3"     }
morgan-client = { path = "../client", version = "0.15.3"      }
morgan-netutil = { path = "../netutil", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
[features]
chacha = []
cuda = []
erasure = []
