[package]
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
edition = "2018"
name = "morgan-install"
description = "The morgan cluster software installer"
version = "0.15.3"
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"

[features]
cuda = []
erasure = []

[dependencies]
bincode = "1.1.4"
bs58 = "0.2.0"
bzip2 = "0.3.3"
console = "0.7.5"
chrono = { version = "0.4.0", features = ["serde"] }
clap = { version = "2.33.0"}
dirs = "1.0.5"
indicatif = "0.11.0"
lazy_static = "1.3.0"
log = "0.4.2"
reqwest = "0.9.17"
ring = "0.13.2"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_yaml = "0.8.9"
morgan-client = { path = "../client", version = "0.15.3"     }
morgan-config-api = { path = "../controllers/config_api", version = "0.15.3"     }
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
tar = "0.4.26"
tempdir = "0.3.7"
url = "1.7.2"
