[package]
name = "morgan-kvstore"
description = "Embedded Key-Value store for morgan"
version = "0.15.3"
homepage = "https://morgan.com/"
repository = "https://github.com/morgan-labs/morgan"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "1.1.4"
byteorder = "1.3.1"
chrono = "0.4.0"
crc = "1.8.1"
memmap = "0.7.0"
rand = "0.6.5"
serde = "1.0.91"
serde_derive = "1.0.91"

[dev-dependencies]
tempfile = "3.0.8"
