[package]
name = "morgan-logger"
version = "0.15.3"
description = "Morgan Logger"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[dependencies]
env_logger = "0.6.1"

[lib]
name = "morgan_logger"
