[package]
name = "morgan-metricbot"
version = "0.15.3"
description = "Morgan Metrics"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[dependencies]
env_logger = "0.6.1"
influx_db_client = "0.3.6"
log = "0.4.2"
reqwest = "0.9.17"
lazy_static = "1.3.0"
sys-info = "0.5.6"
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-helper = { path = "../helper", version = "0.1.0"     }

[dev-dependencies]
rand = "0.6.5"

[lib]
name = "morgan_metricbot"
