[package]
name = "morgan-netutil"
version = "0.15.3"
description = "Morgan Network Utilities"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[dependencies]
bincode = "1.1.4"
clap = "2.33.0"
log = "0.4.2"
nix = "0.14.0"
rand = "0.6.1"
socket2 = "0.3.9"
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-helper = { path = "../helper", version = "0.1.0"     }

tokio = "0.1"

[lib]
name = "morgan_netutil"

[[bin]]
name = "morgan-ip-address"
path = "src/bin/ip_address.rs"

[[bin]]
name = "morgan-ip-address-server"
path = "src/bin/ip_address_server.rs"
