[package]
name = "morgan-runtime"
version = "0.15.3"
description = "Morgan runtime"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[dependencies]
bincode = "1.1.4"
bv = { version = "0.11.0", features = ["serde"] }
byteorder = "1.3.1"
fnv = "1.0.6"
hashbrown = "0.2.0"
libc = "0.2.55"
libloading = "0.5.0"
log = "0.4.2"
memmap = "0.6.2"
rand = "0.6.5"
rayon = "1.0.0"
serde = "1.0.88"
serde_derive = "1.0.91"
serde_json = "1.0.38"
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-metrics = { path = "../metrics", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-stake-api = { path = "../programs/stake_api", version = "0.15.3"     }
morgan-vote-api = { path = "../programs/vote_api", version = "0.15.3"     }
morgan-vote-program = { path = "../programs/vote_program", version = "0.15.3"     }
morgan-stake-program = { path = "../programs/stake_program", version = "0.15.3"     }
morgan-noop-program = { path = "../programs/noop_program", version = "0.15.3"     }

[lib]
name = "morgan_runtime"
crate-type = ["lib"]
