[package]
name = "morgan-tokenbot"
version = "0.15.3"
description = "Morgan TokenBot"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[features]
cuda = []
erasure = []

[dependencies]
bincode = "1.1.4"
bytes = "0.4"
byteorder = "1.3.1"
clap = "2.33"
log = "0.4.2"
serde = "1.0.91"
serde_derive = "1.0.91"
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-metricbot = { path = "../metricbot", version = "0.15.3"     }
tokio = "0.1"
tokio-codec = "0.1"
morgan-helper = { path = "../helper", version = "0.1.0"     }

[lib]
name = "morgan_tokenbot"
crate-type = ["lib"]

[[bin]]
name = "morgan-tokenbot"
path = "src/bin/drone.rs"
