[package]
name = "morgan-transmit"
version = "0.15.3"
authors = ["benjamin <luhuimao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1.4"
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-vaults = { path = "../vaults", version = "0.15.3"  }
hashbrown = "0.2.0"
rand = "0.6.5"
rayon = "1.0.0"
morgan-metrics = { path = "../metrics", version = "0.15.3"     }
morgan-netutil = { path = "../netutil", version = "0.15.3"     }
