[package]
name = "morgan-upload-perf"
version = "0.15.3"
description = "Metrics Upload Utility"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
edition = "2018"
homepage = "https://morgan.com/"
publish = false

[dependencies]
log = "0.4.2"
serde_json = "1.0.39"
morgan-metricbot = { path = "../metricbot", version = "0.15.3"     }

[[bin]]
name = "morgan-upload-perf"
path = "src/upload-perf.rs"

