[package]
name = "morgan-vaults"
version = "0.15.3"
authors = ["benjamin <luhuimao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.2.0"
morgan-metrics = { path = "../metrics", version = "0.15.3"     }
morgan-runtime = { path = "../runtime", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
log = "0.4.2"
