[package]
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
edition = "2018"
name = "morgan-vote-signer"
description = "Morgan Vote Signing Service"
version = "0.15.3"
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"

[dependencies]
bs58 = "0.2.0"
clap = "2.33"
log = "0.4.2"
jsonrpc-core = "11.0.0"
jsonrpc-derive = "11.0.0"
jsonrpc-http-server = "11.0.0"
serde = "1.0.91"
serde_json = "1.0.39"
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-metricbot = { path = "../metricbot", version = "0.15.3"     }
morgan-helper = { path = "../helper", version = "0.1.0"     }

[lib]
name = "morgan_vote_signer"
crate-type = ["lib"]

[[bin]]
name = "morgan-vote-signer"
path = "src/bin/main.rs"
