[package]
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
edition = "2018"
name = "morgan-wallet"
description = "Blockchain, Rebuilt for Scale"
version = "0.15.3"
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"

[dependencies]
bincode = "1.1.4"
bs58 = "0.2.0"
clap = "2.33.0"
chrono = { version = "0.4.0", features = ["serde"] }
dirs = "1.0.5"
log = "0.4.2"
num-traits = "0.2"
serde_json = "1.0.39"
morgan-budget-api = { path = "../programs/budget_api", version = "0.15.3"     }
morgan-client = { path = "../client", version = "0.15.3"     }
morgan-drone = { path = "../drone", version = "0.15.3"     }
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-netutil = { path = "../netutil", version = "0.15.3"     }
morgan-sdk = { path = "../sdk", version = "0.15.3"     }
morgan-stake-api = { path = "../programs/stake_api", version = "0.15.3"     }
morgan-storage-api = { path = "../programs/storage_api", version = "0.15.3"     }
morgan-vote-api = { path = "../programs/vote_api", version = "0.15.3"     }
morgan-vote-signer = { path = "../vote-signer", version = "0.15.3"     }
url = "1.7.2"

[dev-dependencies]
morgan-budget-program = { path = "../programs/budget_program", version = "0.15.3"     }
morgan = { path = "../core", version = "0.15.3"     }

[features]
cuda = []
erasure = []
