[package]
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
edition = "2018"
name = "morgan-wallet"
description = "Blockchain, Rebuilt for Scale"
version = "0.15.3"
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"

[dependencies]
bincode = "1.1.4"
bs58 = "0.2.0"
clap = "2.33.0"
chrono = { version = "0.4.0", features = ["serde"] }
dirs = "1.0.5"
log = "0.4.2"
num-traits = "0.2"
serde_json = "1.0.39"
morgan-budget-api = { path = "../controllers/budget_api", version = "0.15.3"     }
morgan-client = { path = "../client", version = "0.15.3"     }
morgan-tokenbot = { path = "../tokenbot", version = "0.15.3"     }
morgan-logger = { path = "../logger", version = "0.15.3"     }
morgan-netutil = { path = "../netutil", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-stake-api = { path = "../controllers/stake_api", version = "0.15.3"     }
morgan-storage-api = { path = "../controllers/storage_api", version = "0.15.3"     }
morgan-vote-api = { path = "../controllers/vote_api", version = "0.15.3"     }
morgan-vote-signer = { path = "../vote-signer", version = "0.15.3"     }
morgan-helper = { path = "../helper", version = "0.1.0"     }

url = "1.7.2"

[dev-dependencies]
morgan-budget-controller = { path = "../controllers/budget_controller", version = "0.15.3"     }
morgan = { path = "../core", version = "0.15.3"     }

[features]
cuda = []
erasure = []
