[package]
name = "morgan-bpfloader"
version = "0.15.3"
description = "Morgan BPF Loader"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[dependencies]
bincode = "1.1.4"
byteorder = "1.3.1"
libc = "0.2.55"
log = "0.4.2"
solana_rbpf = "=0.1.12"
serde = "1.0.91"
morgan-logger = { path = "../../logger", version = "0.15.3"     }
morgan-interface = { path = "../../interface", version = "0.15.3"     }
morgan-helper = { path = "../../helper", version = "0.1.0"     }
[lib]
name = "morgan_bpf_loader"
crate-type = ["lib", "cdylib"]
