[package]
name = "morgan-budget-api"
version = "0.15.3"
description = "Morgan Budget program API"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[dependencies]
bincode = "1.1.4"
chrono = { version = "0.4.0", features = ["serde"] }
log = "0.4.2"
num-derive = "0.2"
num-traits = "0.2"
serde = "1.0.91"
serde_derive = "1.0.91"
morgan-interface = { path = "../../interface", version = "0.15.3"     }
morgan-helper = { path = "../../helper", version = "0.1.0"     }

[dev-dependencies]
morgan-runtime = { path = "../../runtime", version = "0.15.3"     }

[lib]
name = "morgan_budget_api"
crate-type = ["lib"]
