[package]
name = "morgan-config-api"
version = "0.15.3"
description = "config program API"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[dependencies]
bincode = "1.1.4"
log = "0.4.2"
serde = "1.0.91"
serde_derive = "1.0.91"
morgan-logger = { path = "../../logger", version = "0.15.3"     }
morgan-interface = { path = "../../interface", version = "0.15.3"     }
morgan-helper = { path = "../../helper", version = "0.1.0"     }

[dev-dependencies]
morgan-runtime = { path = "../../runtime", version = "0.15.3"     }

[lib]
name = "morgan_config_api"
crate-type = ["lib"]

